loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:1: error: Missing closing brace `}' assumed here
avance();avance();avance()
^